@@ -1,3 +1,11 @@
+2005-10-26  Zeeshan Ali  <zeenix@gmail.com>
+
+	* gst/rtp/gstrtpg711dec.c:
+	* gst/rtp/gstrtpg711enc.c:
+	* gst/rtp/gstrtpgsmenc.c:
+	* gst/rtp/gstrtpgsmparse.c:
+	Setting the proper copyright notice.
+
 2005-10-26  Julien MOUTTE  <julien@moutte.net>
 
 	* gst/videobox/Makefile.am: Use liboil.
